fix(aside): adjust overflow and line clamp for text

--- a/assets/main.css
+++ b/assets/main.css
@@ -558,6 +558,12 @@ footer {
             font-weight 200ms ease-in-out;
           width: fit-content;
           user-select: none;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 1;
+          line-clamp: 1;
+
           &:hover,
           &:focus {
             box-shadow: none;
